force-app/main/default/objects/Product2/fields/Gamme_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Gamme_Maintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gamme Maintenance</label>
    <referenceTo>NomenclatureMaintenance__c</referenceTo>
    <relationshipLabel>Produits</relationshipLabel>
    <relationshipName>Produits</relationshipName>
    <type>Lookup</type>
</CustomField>