force-app/main/default/objects/Product2/fields/PDT_Fluide__c.field-meta.xml
<CustomField>
    <fullName>PDT_Fluide__c</fullName>
    <label>Fluide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Eau chaude</fullName>
            </value>
            <value>
                <fullName>Eau Surchauffée</fullName>
            </value>
            <value>
                <fullName>Fluide thermique</fullName>
            </value>
            <value>
                <fullName>Vapeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>