force-app/main/default/objects/Product2/fields/PDT_ModeDExploitation__c.field-meta.xml
<CustomField>
    <fullName>PDT_ModeDExploitation__c</fullName>
    <label>Mode d&apos;exploitation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>SPHP (3J)</fullName>
            </value>
            <value>
                <fullName>SPHP (7J)</fullName>
            </value>
            <value>
                <fullName>SPHP (8h)</fullName>
            </value>
            <value>
                <fullName>SPHP (Autocontrôle)</fullName>
            </value>
            <value>
                <fullName>Mode d&apos;exploitation Spécifique</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>