force-app/main/default/objects/Product2/fields/PDT_ModeleService__c.field-meta.xml
<CustomField>
    <fullName>PDT_ModeleService__c</fullName>
    <label>Modèle Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PRD_SousFamilleProduits__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>M001</fullName>
                <label>1/2 REGIE</label>
            </value>
            <value>
                <fullName>M002</fullName>
                <label>Accouplement</label>
            </value>
            <value>
                <fullName>M003</fullName>
                <label>Accroche flamme</label>
            </value>
            <value>
                <fullName>M004</fullName>
                <label>Allumeur</label>
            </value>
            <value>
                <fullName>M005</fullName>
                <label>Analyse fluide caloporteur</label>
            </value>
            <value>
                <fullName>M006</fullName>
                <label>Analyse thermographique installation</label>
            </value>
            <value>
                <fullName>M007</fullName>
                <label>Astreinte 5/7</label>
            </value>
            <value>
                <fullName>M008</fullName>
                <label>Astreinte 7/7</label>
            </value>
            <value>
                <fullName>M009</fullName>
                <label>Atomiseur fioul</label>
            </value>
            <value>
                <fullName>M010</fullName>
                <label>AUD</label>
            </value>
            <value>
                <fullName>M011</fullName>
                <label>Automate de chauffe FMS</label>
            </value>
            <value>
                <fullName>M012</fullName>
                <label>Batterie modem</label>
            </value>
            <value>
                <fullName>M013</fullName>
                <label>Boiler Extension</label>
            </value>
            <value>
                <fullName>M014</fullName>
                <label>Boiler house availibility</label>
            </value>
            <value>
                <fullName>M015</fullName>
                <label>Boiler house extension</label>
            </value>
            <value>
                <fullName>M016</fullName>
                <label>Burner extension</label>
            </value>
            <value>
                <fullName>M017</fullName>
                <label>Buzzer</label>
            </value>
            <value>
                <fullName>M018</fullName>
                <label>Câble liaison</label>
            </value>
            <value>
                <fullName>M019</fullName>
                <label>Canne injection</label>
            </value>
            <value>
                <fullName>M020</fullName>
                <label>Carte alimentation</label>
            </value>
            <value>
                <fullName>M021</fullName>
                <label>Carte automate</label>
            </value>
            <value>
                <fullName>M022</fullName>
                <label>Carte CPU</label>
            </value>
            <value>
                <fullName>M023</fullName>
                <label>Carte mémoire</label>
            </value>
            <value>
                <fullName>M024</fullName>
                <label>Cartes et modules divers</label>
            </value>
            <value>
                <fullName>M025</fullName>
                <label>CEEC INTER 4J</label>
            </value>
            <value>
                <fullName>M026</fullName>
                <label>CEEC INTRA 1J</label>
            </value>
            <value>
                <fullName>M027</fullName>
                <label>CEEC INTRA 2J</label>
            </value>
            <value>
                <fullName>M028</fullName>
                <label>CEEC INTRA RECYC</label>
            </value>
            <value>
                <fullName>M029</fullName>
                <label>Cellule</label>
            </value>
            <value>
                <fullName>M030</fullName>
                <label>Clapet anti-retour</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>