force-app/main/default/objects/Product2/fields/PDT_Serie__c.field-meta.xml
<CustomField>
    <fullName>PDT_Serie__c</fullName>
    <label>Série</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PRD_SousFamilleProduits__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>Brûleur Concurrence</fullName>
            </value>
            <value>
                <fullName>BWA</fullName>
            </value>
            <value>
                <fullName>BWB</fullName>
            </value>
            <value>
                <fullName>BWD</fullName>
            </value>
            <value>
                <fullName>BWDe</fullName>
            </value>
            <value>
                <fullName>BWD ESN</fullName>
            </value>
            <value>
                <fullName>BW DF</fullName>
            </value>
            <value>
                <fullName>BWD Premium</fullName>
            </value>
            <value>
                <fullName>BWJ</fullName>
            </value>
            <value>
                <fullName>BWN</fullName>
            </value>
            <value>
                <fullName>BWO</fullName>
            </value>
            <value>
                <fullName>BWR</fullName>
            </value>
            <value>
                <fullName>BWR ESN</fullName>
            </value>
            <value>
                <fullName>BWS</fullName>
            </value>
            <value>
                <fullName>BWTC</fullName>
            </value>
            <value>
                <fullName>BWTE</fullName>
            </value>
            <value>
                <fullName>BWTI</fullName>
            </value>
            <value>
                <fullName>BWUV</fullName>
            </value>
            <value>
                <fullName>CBX</fullName>
            </value>
            <value>
                <fullName>Chaudronnerie</fullName>
            </value>
            <value>
                <fullName>Coffret électrique</fullName>
            </value>
            <value>
                <fullName>COMBI</fullName>
            </value>
            <value>
                <fullName>DEG</fullName>
            </value>
            <value>
                <fullName>DEO</fullName>
            </value>
            <value>
                <fullName>ECO</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>e-Pack</fullName>
            </value>
            <value>
                <fullName>EPC ES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>