force-app/main/default/objects/Product2/fields/PDT_SupplierProductCode__c.field-meta.xml
<CustomField>
    <fullName>PDT_SupplierProductCode__c</fullName>
    <label>Supplier Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>