force-app/main/default/objects/Product2/fields/PDT_TypeDEquipement__c.field-meta.xml
<CustomField>
    <fullName>PDT_TypeDEquipement__c</fullName>
    <label>Type d&apos;équipement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E001</fullName>
                <label>Air</label>
            </value>
            <value>
                <fullName>E002</fullName>
                <label>Eau</label>
            </value>
            <value>
                <fullName>E003</fullName>
                <label>Air comburant</label>
            </value>
            <value>
                <fullName>E004</fullName>
                <label>Allumage</label>
            </value>
            <value>
                <fullName>E005</fullName>
                <label>Analyse combustion</label>
            </value>
            <value>
                <fullName>E006</fullName>
                <label>Bâche</label>
            </value>
            <value>
                <fullName>E007</fullName>
                <label>Boisseau</label>
            </value>
            <value>
                <fullName>E008</fullName>
                <label>Câble</label>
            </value>
            <value>
                <fullName>E009</fullName>
                <label>Cartouche fioul</label>
            </value>
            <value>
                <fullName>E010</fullName>
                <label>Cartouche gaz</label>
            </value>
            <value>
                <fullName>E011</fullName>
                <label>Circulation</label>
            </value>
            <value>
                <fullName>E012</fullName>
                <label>Coffret electrique</label>
            </value>
            <value>
                <fullName>E013</fullName>
                <label>Colle</label>
            </value>
            <value>
                <fullName>E014</fullName>
                <label>Conductivité</label>
            </value>
            <value>
                <fullName>E015</fullName>
                <label>Contrôle de niveau d&apos;eau</label>
            </value>
            <value>
                <fullName>E016</fullName>
                <label>Cordon</label>
            </value>
            <value>
                <fullName>E017</fullName>
                <label>Coulis</label>
            </value>
            <value>
                <fullName>E018</fullName>
                <label>Cuivre</label>
            </value>
            <value>
                <fullName>E019</fullName>
                <label>Déconcentration</label>
            </value>
            <value>
                <fullName>E020</fullName>
                <label>Détection de flamme</label>
            </value>
            <value>
                <fullName>E021</fullName>
                <label>Divers</label>
            </value>
            <value>
                <fullName>E022</fullName>
                <label>Doseuse</label>
            </value>
            <value>
                <fullName>E024</fullName>
                <label>Entrées</label>
            </value>
            <value>
                <fullName>E025</fullName>
                <label>Entrées + sortie</label>
            </value>
            <value>
                <fullName>E026</fullName>
                <label>Etamatic</label>
            </value>
            <value>
                <fullName>E027</fullName>
                <label>Etanchéité gaz</label>
            </value>
            <value>
                <fullName>E028</fullName>
                <label>Extraction de fond</label>
            </value>
            <value>
                <fullName>E029</fullName>
                <label>Fibre</label>
            </value>
            <value>
                <fullName>E030</fullName>
                <label>Fil</label>
            </value>
            <value>
                <fullName>E031</fullName>
                <label>Fioul</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>