force-app/main/default/objects/Product2/fields/PRD_Combustible__c.field-meta.xml
<CustomField>
    <fullName>PRD_Combustible__c</fullName>
    <label>Combustible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combustible spécifique</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Fioul Lourd</fullName>
            </value>
            <value>
                <fullName>FOD</fullName>
            </value>
            <value>
                <fullName>Mix fod/Gaz</fullName>
            </value>
            <value>
                <fullName>Gaz naturel</fullName>
            </value>
            <value>
                <fullName>Gaz liquefié</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>