force-app/main/default/objects/Product2/fields/PRD_Conditionnement__c.field-meta.xml
<CustomField>
    <fullName>PRD_Conditionnement__c</fullName>
    <label>Conditionnement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>