force-app/main/default/objects/Product2/fields/PRD_Diametre__c.field-meta.xml
<CustomField>
    <fullName>PRD_Diametre__c</fullName>
    <label>Diamètre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>