force-app/main/default/objects/Product2/fields/PRD_Emission__c.field-meta.xml
<CustomField>
    <fullName>PRD_Emission__c</fullName>
    <label>Emission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>