force-app/main/default/objects/Product2/fields/PRD_ERPIdFRA__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdFRA__c</fullName>
    <externalId>true</externalId>
    <label>PRD_ERPIdFRA</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>