force-app/main/default/objects/Product2/fields/PRD_ERPIdNLD__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdNLD__c</fullName>
    <externalId>true</externalId>
    <label>PRD_ERPIdNLD</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>