force-app/main/default/objects/Product2/fields/PRD_ERPIdPOL__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdPOL__c</fullName>
    <externalId>true</externalId>
    <label>PRD_ERPIdPOL</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>