force-app/main/default/objects/Product2/fields/PRD_ERPIdPRT__c.field-meta.xml
<CustomField>
    <fullName>PRD_ERPIdPRT__c</fullName>
    <externalId>true</externalId>
    <label>PRD_ERPIdPRT</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>