force-app/main/default/objects/Product2/fields/PRD_Marque__c.field-meta.xml
<CustomField>
    <fullName>PRD_Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Babcock Wanson</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>