force-app/main/default/objects/Product2/fields/PRD_Modulation__c.field-meta.xml
<CustomField>
    <fullName>PRD_Modulation__c</fullName>
    <label>Modulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>