force-app/main/default/objects/Product2/fields/PRD_Pression__c.field-meta.xml
<CustomField>
    <fullName>PRD_Pression__c</fullName>
    <label>Pression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>