force-app/main/default/objects/Product2/fields/PRD_Puissance__c.field-meta.xml
<CustomField>
    <fullName>PRD_Puissance__c</fullName>
    <label>Puissance / Débit</label>
    <length>250</length>
    <type>Text</type>
</CustomField>