force-app/main/default/objects/Product2/fields/PRD_SousFamilleProduits__c.field-meta.xml
<CustomField>
    <fullName>PRD_SousFamilleProduits__c</fullName>
    <description>Permet de catégoriser le catalogue produit</description>
    <label>Sous-famille produits</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>S001</fullName>
                <label>Adoucisseur</label>
            </value>
            <value>
                <fullName>S044</fullName>
                <label>Aerotherme eau chaude</label>
            </value>
            <value>
                <fullName>S045</fullName>
                <label>Aérotherme gaz</label>
            </value>
            <value>
                <fullName>S046</fullName>
                <label>Aerotherme vapeur</label>
            </value>
            <value>
                <fullName>S002</fullName>
                <label>Audit</label>
            </value>
            <value>
                <fullName>S003</fullName>
                <label>Automate-sécurité-contrôle</label>
            </value>
            <value>
                <fullName>S004</fullName>
                <label>Autres</label>
            </value>
            <value>
                <fullName>S047</fullName>
                <label>Autre TA</label>
            </value>
            <value>
                <fullName>S005</fullName>
                <label>Bâche dégazante</label>
            </value>
            <value>
                <fullName>S006</fullName>
                <label>Brûleur</label>
            </value>
            <value>
                <fullName>S007</fullName>
                <label>Brûleur air pulsé</label>
            </value>
            <value>
                <fullName>S008</fullName>
                <label>Brûleur Veine d&apos;air</label>
            </value>
            <value>
                <fullName>S048</fullName>
                <label>Centrale batterie</label>
            </value>
            <value>
                <fullName>S049</fullName>
                <label>Centrale échangeur</label>
            </value>
            <value>
                <fullName>S050</fullName>
                <label>Centrale make up</label>
            </value>
            <value>
                <fullName>S009</fullName>
                <default>true</default>
                <label>Chaudière</label>
            </value>
            <value>
                <fullName>S010</fullName>
                <label>Chaudière de récupération</label>
            </value>
            <value>
                <fullName>S011</fullName>
                <label>Chaudière électrique</label>
            </value>
            <value>
                <fullName>S012</fullName>
                <label>Chaudière Serpentin</label>
            </value>
            <value>
                <fullName>S013</fullName>
                <label>Chaudière Tube d&apos;eau</label>
            </value>
            <value>
                <fullName>S014</fullName>
                <label>Chaudière Tube de fumée</label>
            </value>
            <value>
                <fullName>S015</fullName>
                <label>Chauffage</label>
            </value>
            <value>
                <fullName>S016</fullName>
                <label>Chaufferie-Réactifs liquides</label>
            </value>
            <value>
                <fullName>S017</fullName>
                <label>Chaufferie-Réactifs liquides AFSSA</label>
            </value>
            <value>
                <fullName>S018</fullName>
                <label>Chaufferie-Réactifs liquides vaporisation rapide</label>
            </value>
            <value>
                <fullName>S019</fullName>
                <label>Chaufferie-Réactifs poudres</label>
            </value>
            <value>
                <fullName>S020</fullName>
                <label>Contrat</label>
            </value>
            <value>
                <fullName>S021</fullName>
                <label>Décarbonatation</label>
            </value>
            <value>
                <fullName>S022</fullName>
                <label>Dégazeur thermique</label>
            </value>
            <value>
                <fullName>S023</fullName>
                <label>Déminéralisation sur résine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>