force-app/main/default/objects/Product2/recordTypes/Equipement.recordType-meta.xml
<RecordType>
    <fullName>Equipement</fullName>
    <active>true</active>
    <label>Equipement</label>
</RecordType>