force-app/main/default/objects/Product2/listViews/Big_Products_View.listView-meta.xml
<ListView>
    <fullName>Big_Products_View</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PDT_Serie__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRD_SousFamilleProduits__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Equipement</value>
    </filters>
    <label>Big Products View</label>
    <language>en_US</language>
</ListView>