force-app/main/default/objects/Product2/listViews/Liste_1.listView-meta.xml
<ListView>
    <fullName>Liste_1</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <label>Liste 1</label>
</ListView>