force-app/main/default/objects/Product2/listViews/Parti_di_ricambio.listView-meta.xml
<ListView>
    <fullName>Parti_di_ricambio</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRD_SousFamilleProduits__c</columns>
    <columns>PDT_ModeleService__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRD_ERPIdITA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRD_ERPIdITA__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Parti di ricambio Italia</label>
</ListView>