force-app/main/default/objects/Product2/listViews/Pi_ces_de_rechanges.listView-meta.xml
<ListView>
    <fullName>Pi_ces_de_rechanges</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRD_SousFamilleProduits__c</columns>
    <columns>PDT_ModeleService__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Pièces de rechanges</label>
    <language>en_US</language>
</ListView>