force-app/main/default/objects/Product2/listViews/Produits_Chaudi_res_Br_leurs.listView-meta.xml
<ListView>
    <fullName>Produits_Chaudi_res_Br_leurs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Brûleur,Chaudière</value>
    </filters>
    <filters>
        <field>PRD_Combustible__c</field>
        <operation>equals</operation>
        <value>Electricité</value>
    </filters>
    <label>Produits (Chaudières, Brûleurs)</label>
</ListView>