force-app/main/default/objects/Product2/listViews/Tous_les_articles_TE.listView-meta.xml
<ListView>
    <fullName>Tous_les_articles_TE</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRD_SousFamilleProduits__c</columns>
    <columns>PRD_ModeleEquipement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Traitement d&apos;eau</value>
    </filters>
    <label>Tous les articles TE</label>
</ListView>